adiciona z-index à posição fixa do link na página de display

--- a/aula06-07/css/display-position.css
+++ b/aula06-07/css/display-position.css
@@ -26,6 +26,7 @@ a {
   right: 50px;
   bottom: 50px;
   position: fixed;
+  z-index: 10;
 }
 
 main {
